--- a/test.html
+++ b/test.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <title>Tweet Streamer</title>
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="//yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
     </head>
     <body>
         <h1>Public Twitter Stream</h1>
         <ul id="tweets"></ul>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
         <script type="text/javascript">
             var tweet_list = $("ul#tweets");
             /**
