Adding some style to make it look a little better

--- a/test.html
+++ b/test.html
@@ -3,7 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>Tweet Streamer</title>
-        <link rel="stylesheet" type="text/css" href="//yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css">
+        <link rel="stylesheet" type="text/css" href="//yui.yahooapis.com/3.4.1/build/cssreset/cssreset-min.css" />
+        <style type="text/css" media="screen">
+            body {
+                font: Helvetica, Verdana, sans-serif;
+                line-height: 1;
+            }
+            img {
+                padding: 5px;
+            }
+            strong {
+                font-weight: bold;
+            }
+            em {
+                font-style: italic;
+            }
+        </style>
     </head>
     <body>
         <h1>Public Twitter Stream</h1>
